# WillowGestionale

./: .gitignore  App_context.py  Backup_manager.py  Book_closer.py  Books_retriever.py  CHANGELOG.md  CRYPTO.md  Config.py  Controllers.py  Event_bus.py  Fatturazione_elettronica_API.py  Gestionale_Enums.py  Main.py  Main.spec  MainQT.py  MainQT.spec  MainQT_macos.spec  MainQT_noconsole.spec  MainTkinter.py  MainTkinter.spec  MainTkinter_macos.spec  Main_bootstrap.py  Main_macos.spec  Model.py  Tab_ui_state_store.py  Updates_controller.py  VERSIONING.md  app_config.json  build exe command.txt  build_version.py  installer_app.spec  package.json  pyproject.toml  release.ps1  requirements.txt
AggregateTooltipServices/: Aggregate_tooltip_builder_base.py  Clients_aggregate_tooltip_builder.py  Expenses_aggregate_tooltip_builder.py  Invoices_aggregate_tooltip_builder.py  Payments_aggregate_tooltip_builder.py  Productions_aggregate_tooltip_builder.py  Refunds_aggregate_tooltip_builder.py  Salaries_aggregate_tooltip_builder.py  Suppliers_aggregate_tooltip_builder.py
AnalyzerServices/: Account_analyzer_service.py  Client_analyzer_service.py  Expense_analyzer_service.py  Invoice_analyzer_service.py  Iva_analyzer_service.py  Monthly_report_analyzer_service.py  Payment_analyzer_service.py  Production_analyzer_service.py  Refund_analyzer_service.py  Report_breakdown_analyzer_service.py  Salary_analyzer_service.py  Supplier_analyzer_service.py  Transfer_analyzer_service.py  User_analyzer_service.py
Analyzers/: Account_analyzer_service.py  Client_analyzer_service.py  (+2 more)
DOCS/: CRYPTO.md  (+2 more)
(+290 files in other folders)
